/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package magma.orc8r.obsidian.swagger;
option go_package = "magma/orc8r/cloud/go/obsidian/swagger/protos";

// SwaggerSpec provides a Swagger specification of the service's REST API.
service SwaggerSpec {
  // GetPartialSpec returns partial Swagger specification of the service's REST API.
  rpc GetPartialSpec(PartialSpecRequest) returns (PartialSpecResponse) {}

  // GetStandaloneSpec returns a standalone Swagger specification of the
  // service's REST API.
  rpc GetStandaloneSpec(StandaloneSpecRequest) returns (StandaloneSpecResponse) {}
}

message PartialSpecRequest {}

message PartialSpecResponse {
  string swagger_spec = 1;
}

message StandaloneSpecRequest {}

message StandaloneSpecResponse {
  string swagger_spec = 1;
}
