/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package magma.orc8r.analytics;
option go_package = "magma/orc8r/cloud/go/services/analytics/protos";

// AnalyticsCollector creates a list of current metrics calculation for a specific module
service AnalyticsCollector {
  // Collect returns a list of partial calculation metrics
  rpc Collect(CollectRequest) returns (CollectResponse);
}

message CollectRequest {
}

// CollectResponse provides the response of the built analytics response
message CollectResponse {
  repeated CalculationResult results = 1;
}

//CalculationResult contains the metrics calculation from a single metric
message CalculationResult {
	double value = 1;
	string metricName = 2;
	map<string, string> labels = 3;
}
